# ChessPP

./: .gitignore  AGENTS.md  CMakeLists.txt  KANBAN.md  README.md  main.cpp
.cache/clangd/index/: Bishop.cpp.55D120F5BBE10022.idx  Bishop.h.D3E85C9B4927637C.idx  Board.cpp.9FAD151FA61C14E0.idx  Board.h.A5FB79B71CE5294C.idx  Bot.cpp.D2C23C222632D152.idx  Bot.h.FB9234FB5D1A101C.idx  CPUEvaluator.cpp.E035FC10FE73BEEC.idx  Chess.cpp.9B53AA013CBA3E11.idx  Chess.h.707CE0C4B3DFC654.idx  GPUEvaluator.h.5273F19523CA4498.idx  King.cpp.1D5145CA3140D111.idx  King.h.BE0D365E1B915161.idx  Knight.cpp.C8AB6B70ED09190D.idx  Knight.h.71E1FEF8F1CFF370.idx  MetalEvaluator.mm.801728CB819C4729.idx  Move.cpp.E69719F12BCE73DD.idx  Move.h.AB74F79DCD07BD80.idx  Pawn.cpp.75B11866A3A6C4CA.idx  Pawn.h.87A46AFD78F90635.idx  Piece.cpp.6DE49507DA0B13CF.idx  Piece.h.7C0B739A7490DD7A.idx  Player.cpp.C66BB8A660D2F46D.idx  Player.h.72210899B0AFB1C0.idx  Queen.cpp.56ABC585C1BC7678.idx  Queen.h.0B79FD0401A9B3DC.idx  Rook.cpp.27410156BDBECF92.idx  Rook.h.BF98BC25366515DD.idx  TestFramework.h.643FFB85AAE7CE0F.idx  main.cpp.5F27F435AD887712.idx  test_board.cpp.81BA0633DCE385E2.idx  test_bot.cpp.712397681F22648E.idx  test_main.cpp.B366A9B7CF3D9CC7.idx  test_pieces.cpp.147F3539C44877DE.idx
.claude/commands/: add-test.md  run.md
.claude/skills/: add-test.md  build.md  test.md
1.0/Headers/: Board.h  Chess.h  Move.h  MovesForPieces.h
1.0/Source/: Board.cpp  Move.cpp  MovesForPieces.cpp
1.0/Source/Pieces/: Piece.cpp
Header/: Bishop.h  Board.h  Chess.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  Queen.h  Rook.h
Header/Pieces/: King.h  Pawn.h  Piece.h
Headers/: Board.h  Chess.h  Move.h  MovesForPieces.h  Piece.h
Headers/Pieces/: Pawn.h  Piece.h
Source/: Bishop.cpp  Board.cpp  Chess.cpp  King.cpp  Knight.cpp  Move.cpp  MovesForPieces.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
Source/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/: Board.cpp  Board.h  Chess.cpp  Move.cpp  Move.h  Piece.cpp  Piece.h
src/Headers/: Bishop.h  Board.h  Bot.h  Chess.h  GPUEvaluator.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  Player.h  Queen.h  Rook.h
src/Shaders/: evaluate.metal
src/Sources/: Bishop.cpp  Board.cpp  Bot.cpp  CPUEvaluator.cpp  Chess.cpp  King.cpp  Knight.cpp  MetalEvaluator.mm  Move.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp
tests/: TestFramework.h  test_board.cpp  test_bot.cpp  test_main.cpp  test_pieces.cpp
